crates/quaffed/tests/snapshots/end_to_end__ignored_files_and_version_control_metadata_are_not_searched.snap
---
source: crates/quaffed/tests/end_to_end.rs
info:
  program: quaff
  args:
    - TODO
---
success: true
exit_code: 0
----- stdout -----
.hidden.py:1:1-1:4: TODO
kept.py:1:1-1:4: TODO

----- stderr -----
