crates/quaffed/tests/snapshots/end_to_end__line_breaks_join_and_anchors_match_as_the_language_says-2.snap
---
source: crates/quaffed/tests/end_to_end.rs
info:
  program: quaff
  args:
    - "-e"
    - "find ^\"x\"$"
    - lf.txt
---
success: true
exit_code: 0
----- stdout -----
lf.txt:1:1-1:1: x

----- stderr -----
