crates/quaffed/tests/snapshots/end_to_end__line_breaks_join_and_anchors_match_as_the_language_says-4.snap
---
source: crates/quaffed/tests/end_to_end.rs
info:
  program: quaff
  args:
    - "-e"
    - "find \"e\" \"nd\""
    - lf.txt
---
success: true
exit_code: 0
----- stdout -----
lf.txt:2:1-2:3: end

----- stderr -----
