crates/quaffed/tests/snapshots/end_to_end__line_breaks_join_and_anchors_match_as_the_language_says.snap
---
source: crates/quaffed/tests/end_to_end.rs
info:
  program: quaff
  args:
    - "-e"
    - "find \"x\" $^ \"end\""
---
success: true
exit_code: 0
----- stdout -----
cr.txt:1:1-2:3: x end
crlf.txt:1:1-2:3: x end
lf.txt:1:1-2:3: x end

----- stderr -----
