crates/quaffed/tests/snapshots/end_to_end__nothing_runs_when_any_source_is_wrong.snap
---
source: crates/quaffed/tests/end_to_end.rs
info:
  program: quaff
  args:
    - "-e"
    - "find \"TODO\""
    - "-e"
    - "fnd \"x\""
    - src
---
success: false
exit_code: 5
----- stdout -----

----- stderr -----
quaff: -e expression 2, at character 1: unknown statement: `fnd`; the statements in this build are find, replace and delete
