crates/quaffed/tests/snapshots/end_to_end__python_files_are_searched_in_the_encoding_they_declare-2.snap
---
source: crates/quaffed/tests/end_to_end.rs
assertion_line: 543
info:
  program: quaff
  args:
    - привет
---
success: true
exit_code: 0
----- stdout -----
koi8.py:3:13-3:18: привет

----- stderr -----
quaff: 1 file in an unknown 8-bit encoding not searched for "привет", which is not ASCII and so has no one spelling there
