crates/quaffed/tests/snapshots/end_to_end__python_files_are_searched_in_the_encoding_they_declare-3.snap
---
source: crates/quaffed/tests/end_to_end.rs
assertion_line: 544
info:
  program: quaff
  args:
    - x = 1
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
quaff: no matches for "x = 1"
quaff: "arabic.py" not searched for "x = 1": it is in "mac_arabic", which spells a character of it more than one way
