crates/quaffed/tests/snapshots/end_to_end__python_files_are_searched_in_the_encoding_they_declare-4.snap
---
source: crates/quaffed/tests/end_to_end.rs
assertion_line: 549
info:
  program: quaff
  args:
    - "-e"
    - "find \"x = 1\" expect 1"
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
quaff: -e expression 1, at character 1: cannot check for exactly 1 match of "x = 1": "arabic.py", in "mac_arabic", which spells a character of the query more than one way, was not searched.  Found 0 in the files that were searched.  To check it, re-encode the file as UTF-8, or leave it out with the scope or an ignore file
