crates/quaffed/tests/snapshots/end_to_end__python_files_are_searched_in_the_encoding_they_declare.snap
---
source: crates/quaffed/tests/end_to_end.rs
assertion_line: 542
info:
  program: quaff
  args:
    - café
---
success: true
exit_code: 0
----- stdout -----
latin1.py:2:9-2:12: café

----- stderr -----
quaff: 1 file in an unknown 8-bit encoding not searched for "café", which is not ASCII and so has no one spelling there
